# intro-to-ml

./: .gitignore  README.md  pyproject.toml
Simple_Model/Scripts/: Dataset.py  Model.py  SpectsLoader.py  Train_and_Test.py  Trainloop.py  audio_data.py  audio_to_spectrogram_converter.py
backend/: audio_cleaner.py  audio_data.py  audio_recorder.py  audio_to_spectrogram_converter.py  intercom_classifier.py  spectrogram_classifier.py  spectrogram_cleaner.py  spectrogram_sharpener.py
backend/daps/: data.py  loader.py
backend/spectrograms/: loader.py  utils.py
backend/tsrc/: data.py  loader.py
data preprocessing/: data preprocessing module.py
data_preprocessing/: augmentation.py  cleaning.py  merging.py  spectrogram_converter.py  spectrogram_eda.py  spectrogram_sharpener.py  split_into_classes.py  splitting.py  train_test_split.py
data_preprocessing/augmentation/: audio.py  compose.py  image.py
frontend/: __main__.py  app.py
model_training/: audio_dataset.py  cnn_classifier.py  measures.py  neural_network.py  optimization.py  spects_loader.py  test_methods.py  train_and_test.py  train_loop.py  trainer.py
model_training/architectures/: __init__.py  resnet.py  (+3 more)
scripts/: AugmentationExample.ipynb  ChartsForReport.ipynb  CleanRawDataEDA.ipynb  ConfusionMatrixForReport.ipynb  DataAnalysis.ipynb  DataAugmentation.ipynb  DataPreprocessing.ipynb  DownloadData.ipynb  EvaluateCustomDataset.ipynb  Example.ipynb  HPOOptimization.ipynb  PCA.ipynb  ParameterSpaceAnalysis.ipynb  ResultsAnalysis.ipynb  TrainModel.ipynb  TrainResnetModel.ipynb  TrainSimpleCNNModel.ipynb
