[project]
name = "backend"
version = "0.0.1"
description = "Backend for Audio Intercom Classifier"
dependencies = [
    "pyaudio==0.2.14",
    "librosa==0.10.2",
    "matplotlib==3.9.2",
    "torch==2.5.0+cu121",
]
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
