[project]
name = "backend"
version = "0.0.1"
description = "Backend for Audio Intercom Classifier"
dependencies = [
    "ipywidgets==8.1.5",
    "librosa==0.10.2",
    "matplotlib==3.9.2",
    "noisereduce==3.0.3",
    "pyaudio==0.2.14",
    "pydub==0.25.1",
]
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
