[project]
name = "backend"
version = "0.0.1"
description = "Backend for Audio Intercom Classifier"
dependencies = [
    "audiomentations==0.37.0",
    "ipywidgets==8.1.5",
    "librosa==0.10.2",
    "matplotlib==3.9.2",
    "noisereduce==3.0.3",
    "optuna==4.1.0",
    "pandas==2.2.3",
    "pedalboard==0.9.16",
    "pyaudio==0.2.14",
    "pydub==0.25.1",
    "scipy==1.12.0",
]
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
